# vma

./: .gitignore  CMakeLists.txt  Dependencies.cmake  LICENSE  MODULE.bazel  README.md  batch_test.fish  test.cpp
Linear Algebra.xcodeproj/: project.pbxproj
Linear Algebra.xcodeproj/project.xcworkspace/xcuserdata/cmookj.xcuserdatad/: UserInterfaceState.xcuserstate
Linear Algebra.xcodeproj/xcshareddata/xcschemes/: Linear Algebra.xcscheme  TestLinearAlgebra.xcscheme
Linear Algebra.xcodeproj/xcuserdata/cmookj.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
Linear Algebra.xcodeproj/xcuserdata/cmookj.xcuserdatad/xcschemes/: xcschememanagement.plist
benchmark/: CMakeLists.txt  LICENSE  test.cpp
blat/: CMakeLists.txt
blat/include/: blat.hpp
blat/internal/: concurrency.hpp
blat/src/: blat.cpp
cmake/: UpdateSubmodules.cmake
core/: BUILD  concurrency.h  vma.cc  vma.h
gtest/: CMakeLists.txt  test.cpp
include/lalib/: linear_algebra.hpp
src/: linear_algebra.cpp
test/: BUILD  CMakeLists.txt  TestLinearAlgebra.mm  test.cpp  vma_test.cc
vma/: CMakeLists.txt
vma/include/: vma.hpp
vma/src/: vma.cpp
